# VOXIS

./: .gitignore  INSTALL.md  LICENSE.md  README.md  appdmg.json  audio honey  build_distro.sh  compile.sh  compile_win.ps1  install.py  install.sh  install_mac.sh  install_win.ps1  requirements.txt  requirements_win.txt  test_hf_dl.py  test_voicerestore.py  trinity_v8_core.spec  trinity_v8_core_win.spec  voxis-cli.sh  voxis_downloader.py
.github/workflows/: build.yml  release.yml
VOXIS DENSE/VOXIS DENSE.xcodeproj/: project.pbxproj
app/: index.html  package-lock.json  package.json  vite.config.ts
app/electron/: license.ts  main.ts  preload.ts  tsconfig.json
app/src/: App.tsx  Bauhaus.css  main.tsx  vite-env.d.ts
app/src-tauri/: Cargo.toml  tauri.conf.json
app/src-tauri/capabilities/: default.json
app/src-tauri/icons/: icon.icns
app/src-tauri/src/: lib.rs  license.rs
build_scripts/: build_voxis_desktop.sh  build_windows_binary.ps1  stage_binaries.sh
docs/: ARCHITECTURE.md
homebrew-voxis/: README.md
homebrew-voxis/Casks/: voxis.rb
license-server/: .env.example  generate-key.js  package-lock.json  package.json  server.js
trinity_engine/: PHASELIMITER_INTEGRATION.md  README.md  create_test_audio.py  download_models.py  model_downloader.py  model_registry.py  requirements.txt  setup_models.py  trinity_core.py
trinity_engine/modules/: __init__.py  adaptive_chunker.py  coreml_bridge.py  deep_filter.py  denoiser.py  device_utils.py  diffhiervc_wrapper.py  error_telemetry.py  frame_transformer.py  ingest.py  mastering.py  mastering_phase.py  (+11 more)
(+12 files in other folders)
