[package]
name = "voxis"
version = "4.0.0"
description = "Voxis 4.0 DENSE — Professional Audio Restoration by Glass Stone LLC"
authors = ["Glass Stone LLC <ceo@glassstone.io>"]
edition = "2021"

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# License: AES-256-GCM encryption + machine fingerprint
aes-gcm = "0.10"
sha2 = "0.10"
hmac = "0.12"
pbkdf2 = "0.12"
rand = "0.8"
hex = "0.4"
hostname = "0.4"
sysinfo = "0.32"

# License: HTTP activation/validation
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }

# File open (cross-platform)
open = "5"
dirs = "6"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
